--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,17 @@ version: '3.9'
 services:
   backend:
     build: .
+    entrypoint: .docker/entrypoint.sh
     depends_on:
       - db
-    entrypoint: .docker/entrypoint.sh
     container_name: challenge-produza-backend
     ports:
-      - "3000:3000"
+      - "8080:8080"
       - "5555:5555"
     volumes:
       - .:/home/node/app
     networks:
-      - backend
+      - challenge-produza-network
 
   db:
     image: postgres:16.1
@@ -27,8 +27,8 @@ services:
     environment:
       - POSTGRES_PASSWORD=docker
     networks:
-      - backend
+      - challenge-produza-network
 
 networks:
-  backend:
+  challenge-produza-network:
     driver: bridge
